Squash branch commits